--- a/manifest.json
+++ b/manifest.json
@@ -5,27 +5,16 @@
     "manifest_version": 2,
 
     "permissions": [
-        "tabs"
+        "tabs",
+        "storage"
     ],
 
     "background": {
-        "scripts": ["background.js"],
-        "persistent": false
+        "scripts": ["background.js"]
     },
 
     "content_scripts": [{
-        "matches": ["*://*.twitch.tv/*"
-        ],
+        "matches": ["*://*.twitch.tv/*"],
         "js": ["script.js"]
-    }],
-
-    "browser_action": {
-        "default_icon" : "/images/active-icon128.png",
-        "icons" : {
-            "16" : "/images/active-icon16.png",
-            "48" : "/images/active-icon48.png",
-            "128": "/images/active-icon128.png"
-        }
-    }
-
+    }]
 }
