--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,14 @@
     "content_scripts": [{
         "matches": ["*://*.twitch.tv/*"],
         "js": ["script.js"]
-    }]
+    }],
+
+    "browser_action": {
+        "default_icon" : "/images/active-icon128.png",
+        "icons" : {
+            "16" : "/images/active-icon16.png",
+            "48" : "/images/active-icon48.png",
+            "128": "/images/active-icon128.png"
+        }
+    }
 }
